# siege-config-tracker

./: Cargo.toml  release.toml
.github/workflows/: ci.yml  release.yml
crates/adapter-local/: Cargo.toml
crates/adapter-local/src/: lib.rs  local_json_adapter.rs
crates/tracker-core/: Cargo.toml
crates/tracker-core/src/: diff.rs  directory.rs  lib.rs  storage.rs  watcher.rs
crates/tracker-core/src/parser/: audio.rs  display.rs  input.rs  misc.rs  mod.rs  quality.rs
sample/: GameSettings.ini
src/: main.rs
