[package]
name = "tracker-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde_ini = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
colored = "3.1.1"
similar = "3.1.1"
serde_json = "1.0.150"
notify = { version = "8.2.0", features = ["crossbeam-channel"] }
home = "0.5.12"
directories = "6.0.0"
log = "0.4.29"
crossbeam-channel = "0.5.15"
